--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,256 +1,63 @@
-.root {
-    background-color: var(--bg-dark);
-    padding-bottom: 50px;
-}
-
-.content {
-    padding-top: 72px;
-    padding-bottom: 40px;
-}
-
-.contentTop {
-    display: grid;
-    grid-template-columns: 0.25fr 0.25fr 0.5fr;
-}
-
-.newsLetter {
+.footer {
+    background-color: #2a2725;
+    color: #f0eae2;
+    padding: 3rem 1.5rem 2.5rem;
     display: flex;
-    justify-content: flex-end;
-}
-
-.newsLetterContent {
-    max-width: 360px;
-}
-
-.newsLetterContent p {
-    font-size: 14px;
-}
-
-.linkList {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    font-size: 14px;
-}
-
-.link{
-    color: var(--standard-white);
-    margin-bottom: 12px;
-    display: inline-block;
-}
-
-.linkTitle {
-    font-size: 18px;
-    margin-bottom: 24px;
-    display: block;
-    color: var(--standard-white);
-}
-
-.link::after {
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    font-size: 0.9rem;
+    font-family: 'Inria Serif', serif;
+  }
+  
+  .left a {
+    margin-right: 1rem;
+    font-size: 0.95rem;
+    text-decoration: none;
+    color: #e2ddd4;
+    transition: opacity 0.3s ease;
+  }
+  
+  .left a:hover {
+    opacity: 0.7;
+  }
+  
+  .right {
+    font-size: 0.85rem;
+    color: #d6cec3;
+  }
+  
+  .right span {
+    font-weight: 600;
+    letter-spacing: 0.4px;
+    color: #f3e6d8;
+  }
+  .footer::before {
     content: '';
     display: block;
-    width: 0;
-    height: 2px;
-    background: var(--standard-white);
-    transition: width 0.3s ease-in-out;
-}
-
-.link:hover::after {
+    height: 1px;
     width: 100%;
-}
+    background-color: #3a3633;
+    margin-bottom: 1.5rem;
+    opacity: 0.4;
+  }
 
-.promoMessage {
-    color: var(--standard-white);
-    justify-self: end;
-}
-
-.newsLetterForm {
-    margin-top: 38px;
-    margin-bottom: 80px;
-}
-
-.socialContainer {
-    width: 100%;
-    display: flex;
-    flex-direction: row-reverse;
-}
-
-.socialIconContainer {
-    color: var(--standard-white);
-    display: flex;
-    align-items: center;
-
-    margin-right: 28px;
-    padding: 10px;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: background-color 0.3s ease-in-out;
-}
-
-.socialIconContainer:first-child {
-    margin-right: 0px;
-}
-
-.socialIconContainer svg {
-    width: 16px;
-    height: 16px;
-}
-
-.contentBottomContainer {
-    border-top: 1px solid var(--standard-dark-grey);
-}
-
-.contentBottom {
-    margin-top: 40px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.settings {
-    display: flex;
-}
-
-.settings > div {
-    max-width: 180px;
-}
-
-.settings > div:first-child {
-    margin-right: 16px;
-}
-
-.creditCardContainer {
-    display: flex;
-    align-items: center;
-}
-
-.creditCardContainer > img {
-    margin-right: 18px;
-}
-
-.creditCardContainer > img:last-child {
-    margin-right: 0px;
-}
-
-.amexSize {
-    width: 21px;
-    height: 21px;
-}
-
-.masterSize {
-    width: 27px;
-    height: 17px;
-}
-
-.visaSize {
-    width: 26px;
-    height: 14px;
-}
-
-.copyrightContainer {
-    display: flex;
-    align-items: flex-end;
-    flex-direction: column;
-}
-
-.copyrightContainer span{
-    color: var(--standard-white);
-    display: block;
-    margin-top: 32px;
-    font-size: 12px;
-    line-height: 15px;
-}
-
-.copyrightContainer a {
-    color: var(--standard-white);
-}
-
-.mobileFooterLinks {
-    display: none;
-}
-
-.accordionTitle {
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 22px;
-    color: var(--standard-white);
-    text-transform: capitalize;
-}
-
-.iconContainer {
-    color: var(--standard-white);
-}
-
-@media (hover: hover) {
-    .socialIconContainer:hover {
-        background-color: var(--standard-dark-grey)
-    }
-}
-
-@media (max-width: 800px) {
-    .contentTop {
-        display: grid;
-        grid-template-columns: 1fr;
-    }
-    
-    .newsLetter {
-        margin-top: 24px;
-        display: flex;
-        justify-content: start;
-    }
-
-    .newsLetterContent {
-        max-width: 100%;
-    }
-
-    .socialContainer {
-        justify-content: center;
-    }
-
-    .contentBottom {
-        grid-template-columns: 1fr;
-    }
-
-    .copyrightContainer {
-        margin-top: 40px;
-        align-items: center;
-    }
-
-    .newsLetterForm {
-        margin-bottom: 30px;
-    }
-
-    .settings > div {
-        max-width: unset;
-    }
-
-    .footerLinks {
-        display: none;
-    }
-
-    .mobileFooterLinks {
-        display: block;
-    }
-
-    .footerLinkContainer {
-        margin-bottom: 16px;
-    }
-
-    .settings {
-        display: grid;
-        grid-template-columns: 0.55fr 0.45fr;
-        gap: 16px;
-    }
-
-    .socialIconContainer {
-        margin-right: 16px;
-    }
-
-    .socialIconContainer:first-child {
-        margin-right: 0px;
-    }
-}
-.footer {
-    padding: 2rem 1rem;
-    background-color: #f3f0ea;
+  .tagline {
+    font-size: 0.8rem;
+    color: #cfc6b8;
+    margin-top: 1rem;
+    font-family: 'Inria Serif', serif;
+  }
+  
+  .signature {
+    font-weight: 600;
+    color: #f6e8d9;
+    text-decoration: none;
+    transition: color 0.2s ease;
+  }
+  
+  .signature:hover {
+    color: #c4a484;
+    text-decoration: underline;
   }
   
