--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -27,3 +27,12 @@
     }
 }
 
+.cartOverride {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 100%;
+    padding: 0 20px;
+    box-sizing: border-box;
+  }
+  
